appId: com.wiamapp.mobile
---
- launchApp
- tapOn: "Sign Up"
- assertVisible: "Create your account"
- tapOn: "Sign In"
- assertVisible: "Welcome Back"
